--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 Progressive Power Thrash Melodic Heavy metal music appreciation and versioning system. include "SDL.h"
 
+-------
+
+obj2egg can be found here -> http://github.com/treeform/obj2egg/
+
